[package]
name = "croutond"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
sha2 = "0.10"
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
